# container-desktop

./: Cargo.toml  README.md  sample-data
.github/workflows/: rust.yml
container_core/: Cargo.toml
container_core/src/: container.rs  image.rs  lib.rs
core/: Cargo.toml
core/src/: image.rs  lib.rs
desktop/: Cargo.toml  index.html
desktop/src/: main.rs  main_menu.rs  message.rs  provider.rs  provider_wasm32.rs  style.rs
desktop/src/controls/: dialog.rs  error_dialog.rs  icons.rs  list_item.rs  list_view.rs  loading_view.rs  mod.rs  ui.rs
desktop/src/style/: button.rs  button_chip.rs  colors.rs  container_background.rs
desktop/src/views/: container_view.rs  image_view.rs  iview.rs  mod.rs  volume_view.rs
runtimes/docker/: Cargo.toml
runtimes/docker/src/: lib.rs
runtimes/nspawn/: Cargo.toml  README.md
runtimes/nspawn/src/: lib.rs  systemd.rs  systemd_machine.rs
runtimes/simulator/: Cargo.toml
runtimes/simulator/src/: lib.rs
src/: controls.rs  main.rs  main_menu.rs  message.rs  style.rs
src/controls/: container_item.rs  list_item.rs  list_view.rs  ui.rs
src/style/: button.rs  button_chip.rs
src/views/: container_view.rs  image_view.rs  iview.rs  volume_view.rs
src/views/controls/: button_chip_style.rs  container_item.rs
