[package]
name = "container-desktop"
version = "0.1.0"
edition = "2021"
authors = ["Hichem, Ben Fekih <hichem.f@live.de>"]
description = "lightweight tool to manage container image."
homepage = "git@github.com:karthago1/container-desktop.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
container_core = { version = "0.1.0", path = "../container_core" }
iced = { version = "0.9.0", features = ["image", "async-std"] }
iced_native = "0.10.1"
once_cell = "1.17.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading = "0.8.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
simulator-client = { version = "0.1.0", path = "../runtimes/simulator" }
