[package]
name = "nspawn-client"
version = "0.1.0"
edition = "2021"
authors = ["Hichem, Ben Fekih <hichem.f@live.de>"]

[lib]
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
chrono = "0.4.24"
container_core = { version = "0.1.0", path = "../../container_core" }
dbus = "0.9.7"
once_cell = "1.17.1"
