[package]
name = "simulator"
version = "0.1.0"
edition = "2021"
authors = ["Hichem, Ben Fekih <hichem.f@live.de>"]

[lib]
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { version = "0.1.0", path = "../../core" }
