[package]
name = "simulator-client"
version = "0.1.0"
edition = "2021"
authors = ["Hichem, Ben Fekih <hichem.f@live.de>"]

[lib]
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
container_core = { version = "0.1.0", path = "../../container_core" }
